package cl.icel.pasteleria;

public class Pasteleria {
    private String nombrePasteleria;

    public void setNombrePasteleria(String nombrePasteleria) {
        this.nombrePasteleria = nombrePasteleria;
    }
}
